Fixing panel alignment

--- a/index.scss
+++ b/index.scss
@@ -59,10 +59,15 @@ p {
 #panel {
     width: $side-bar-width;
     padding-left: 1em;
+    padding-right: 1em;
     
     h2 {
         padding-top: 1em;
         color: $accent-color;
         font-family: lobster;
     }
+}
+
+.panel-wrapper {
+    height: 100%;
 }
